//
// Licensed to the Apache Software Foundation (ASF) under one
// or more contributor license agreements.  See the NOTICE file
// distributed with this work for additional information
// regarding copyright ownership.  The ASF licenses this file
// to you under the Apache License, Version 2.0 (the
// "License"); you may not use this file except in compliance
// with the License.  You may obtain a copy of the License at
//
//   http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing,
// software distributed under the License is distributed on an
// "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
// KIND, either express or implied.  See the License for the
// specific language governing permissions and limitations
// under the License.
//

syntax = "proto3";
package org.apache.pinot.plugin.inputformat.protobuf;

/*
 * Test message used for testing the ProtoBufRecordExtractor
 */
message TestMessage {
  string string_field = 1;
  int32 int_field = 2;
  int64 long_field = 3;
  double double_field = 4;
  float float_field = 5;
  bool bool_field = 6;
  bytes bytes_field = 7;
  repeated string repeated_strings = 8;

  message NestedMessage {
    string nested_string_field = 1;
    int32 nested_int_field = 2;
  }
  NestedMessage nested_message = 9;
  repeated NestedMessage repeated_nested_messages = 10;
  map<string, NestedMessage> complex_map = 11;
  map<string, int32> simple_map = 12;
  enum TestEnum {
    ALPHA = 0;
    BETA = 1;
    GAMMA = 2;
    DELTA = 3;
  }
  TestEnum enum_field = 15; // Field numbers do not need to be consecutive
}
